hiburan-k8s.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-hiburan

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-hiburan

  template:
    metadata:
      labels:
        app: backend-hiburan

    spec:
      containers:
        - name: backend-hiburan

          image: shakilaaulia245/hiburan-backend:latest

          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service

metadata:
  name: hiburan-backend-service

spec:
  type: ClusterIP

  selector:
    app: backend-hiburan

  ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-hiburan

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend-hiburan

  template:
    metadata:
      labels:
        app: frontend-hiburan

    spec:
      containers:
        - name: frontend-hiburan

          image: shakilaaulia245/hiburan-frontend:latest

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: hiburan-frontend-service

spec:
  type: ClusterIP

  selector:
    app: frontend-hiburan

  ports:
    - port: 80
      targetPort: 80
